@@ -58,6 +58,7 @@ f12dd6d8948b0d2c2fa1f356bebceced5f253483 data\createbigcannons\block_recipes\unb
 c91c6fabfd8a2561b2de085c6d175a711f024f0b assets\createbigcannons\blockstates\built_up_nethersteel_cannon_barrel.json
 a9a26d344c3337599f3928f745fdaa1754636a9d assets\createbigcannons\models\block\nethersteel_block.json
 7eb621db9ed38207f5564449e60d3d6e7fcd03ef assets\createbigcannons\models\block\cast_iron_autocannon_recoil_spring.json
+b4c750499ed144a58bbacf8c99c9556725215d8b data\ritchiesprojectilelib\tags\entity_types\precise_motion.json
 d1e1e763bbac8a0de297cfa613da80d0c74cdec5 assets\createbigcannons\blockstates\bronze_cannon_chamber.json
 0e407291874a14a0a596ef5704099829d62a9bbd data\createbigcannons\recipes\mortar_stone.json
 59693043d9c30f2842b1eb48b32c2c14c9ee7cd1 assets\createbigcannons\blockstates\molten_cast_iron.json
