@@ -9,6 +9,10 @@ Create Big Cannons 0.5.4.a, with a few bug fixes and minor changes.
 Added:
 - Added some config options to use subheadings in Create config screen
 - Added durability and fuze position tooltip to Impact Fuze and Delayed Impact Fuze
+Changed:
+- Updated Ritchie's Projectile Lib dependency to 2.0.0
+ - Improved chunkloading performance
+ - Replaced PreciseProjectile interface with tag #ritchiesprojectilelib:precise_motion
 Fixed:
 - Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
 - Fixed cannon loader pushing without head
